--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,9 @@ table {
 	animation: smoothScroll 0.5s;
     position: fixed;
     left: 0;
-    right: 0;
+	right: 0;
+	padding: 12px 0;
+	z-index: 4;
 }
 
 /* static css */
@@ -111,15 +113,17 @@ header a{
 	margin-left: 20px;
 }
 
-.banner{
+.banner, .categoriesbanner, .blogbanner{
 	background-image: url('/static/images/banner.png');
-    height: 300px;
-    background-size: cover;
+	height: 309px;
+	background-size: cover;
+	padding-top: 52px;
 }
 .categoriesbanner{
 	background-image: url('/static/images/categories-banner.png');
-    height: 300px;
-    background-size: cover;
+}
+.blogbanner{
+	background-image: url('/static/images/blogbanner.png')
 }
 .banner h1, .categoriesbanner h1{
 	font-size: 28px;
@@ -127,7 +131,7 @@ header a{
 	text-align: center;
 	padding-top: 100px;
 }
-.aboutus h2{
+.aboutus h2, .categoriesListHead h2{
 	font-size: 35px;
     font-family: Circular Std Medium;
     font-style: normal;
@@ -195,9 +199,12 @@ header a{
 }
 .homeCategoriesCards{
 	border: 2px solid transparent;
+	transition: all 400ms ease-out,transform 400ms ease-out,-webkit-transform 400ms ease-out;
 }
 .homeCategoriesCards:hover{
 	border: 2px solid #007bff;
+	transform: translate3d(0,-3px,0);
+    box-shadow: 0px 7px 13px rgba(0,0,0,0.14);
 }
 .homeCategoriesCards h3{
 	font-size: 16px;
@@ -260,3 +267,96 @@ header a{
     padding: 8px 20px;
     border-radius: 37%;
   }
+  .categoriesCards{
+    border: 2px solid #f2f2f2;
+    border-radius: 5px;
+	padding: 22px;
+	margin: 5px;
+	transition: all 400ms ease-out,transform 400ms ease-out,-webkit-transform 400ms ease-out;
+  }
+  .categoriesCards:hover{
+	border: 2px solid #0165ff;
+	transform: translate3d(0,-3px,0);
+    box-shadow: 0px 7px 13px rgba(0,0,0,0.14);
+  }
+  .categoriesList{
+	  margin-bottom: 40px;
+  }
+  .categoriesList ul {
+	  text-align: center;
+  }
+  .categoriesList ul li{
+	  display: inline-block;
+	  width: 32%;
+  }
+  .categoriesCards h3{
+	  font-size: 14px;
+	  font-family: 'Circular Std Medium';
+	  font-weight: 500;
+	  color: #383f49;
+	  margin-bottom: 10px;
+	  text-align: left;
+  }
+  .categoriesCards p{
+	color:   #8a94a3;
+	font-size: 13px;
+	font-family: 'Circular Std Medium';
+	font-weight: 500;
+	text-align: left;
+  }
+  .categoriesCards a{
+	  text-align: left;
+	  display: block;
+	  margin-top: 10px;
+	  font-size: 13px;
+	  color: #0165ff !important;
+  }
+  .categoriesListHead h2{
+	padding-top: 58px;
+}
+.blogImage img{
+	width: 100%;
+}
+.blogContent h3{
+	font-family: Circular Std Medium;
+    font-size: 18px;
+    color: #323c47;
+    line-height: 24px;
+    display: inline-block;
+    width: 100%;
+    margin-top: 17px;
+}
+.blogContent{
+	padding: 0 16px 24px;
+}
+.blogContainer{
+	margin-bottom: 20px;
+}
+
+.blogContent p{
+	font-size: 17px;
+    color: #848a91;
+    line-height: 26px;
+}
+
+.blogContent a{
+	color: #007bff !important;
+	margin-top: 10px;
+	display: block;
+	font-family: Circular Std Medium;
+}
+.blogCard img{
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+.blogCard:hover{
+	opacity: 1 !important;
+	box-shadow: rgba(45,45,45,0.05) 0px 2px 2px, rgba(49,49,49,0.05) 0px 4px 4px, rgba(42,42,42,0.05) 0px 8px 8px, rgba(32,32,32,0.05) 0px 16px 16px, rgba(49,49,49,0.05) 0px 32px 32px, rgba(35,35,35,0.05) 0px 64px 64px;
+	transform: translate(0, -4px);
+}
+.blogCard{
+	box-shadow: 0 2px 20px 0 rgba(0,0,0,0.05);
+	border-radius: 5px;
+	transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out;
+	margin-bottom: 25px
+}
