--- a/styles.css
+++ b/styles.css
@@ -368,3 +368,68 @@ header a{
 	transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out;
 	margin-bottom: 25px
 }
+
+.aboutHead h3{
+	font-size: 32px !important;
+	text-align: center;
+	margin-bottom: 20px;
+}
+.aboutListHead h2{
+	font-size: 16px;
+    color: #0265ff;
+	padding: 0 0 10px;
+	text-align: center;
+	margin-top: 40px;
+	margin-bottom: 10px;
+}
+.aboutListHead p{
+	font-size: 18px;
+    line-height: 27px;
+	color: #848a91;
+	text-align: center;
+    padding-bottom: 30px;
+    font-family: 'CircularStd';
+    margin: 0;
+}
+.countHolder{
+	background: #f1f6fe;
+	padding: 33px 0 28px;
+}
+.countHolder ul li{
+    display: inline-block;
+    margin: 0px 50px;
+    vertical-align: middle;
+    padding-top: 28px;
+}
+.countHolder ul {
+	text-align: center;
+}
+.countHolder ul li h3{
+	color: #323c47;
+	padding: 0 0 15px;
+	font-size: 32px;
+}
+.countHolder ul li p{
+	font-size: 18px;
+	line-height: 25px;
+	color: #6a7a8e;
+    padding-bottom: 30px;
+}
+.contactusHolder{
+	background-color: #0165ff;
+	padding: 54px;
+}
+.contactusHolder h4{
+	color: #fff;
+    font-size: 12px;
+    margin-bottom: 5px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.contactusHolder p{
+text-align: left;
+padding-bottom: 0;
+color: #fff;
+font-size: 32px !important;
+line-height: 42px;
+}
